SERVER-94518 Throw an error for null or missing args in setEquals and setIsSubset (#27757)

GitOrigin-RevId: a269f124d28073e40be3b3f3da9d1a1351b37154